force-app/main/default/objects/Referral_Points__c/Referral_Points__c.object-meta.xml
<CustomObject>
    <label>Referral Points</label>
    <nameField>
        <displayFormat>RP-{00000}</displayFormat>
        <label>Referral Points Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>