force-app/main/default/objects/Referral_Points__c/fields/Customer_Reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Reference</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referral Points</relationshipLabel>
    <relationshipName>Referral_Points</relationshipName>
    <type>Lookup</type>
</CustomField>