force-app/main/default/objects/Referral_Points__c/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <formula>IF( Customer_Reference__r.Booked_Opportunities__c &gt; 0, &apos;Active&apos;, &apos;Inactive&apos;)</formula>
    <label>Customer Status</label>
    <type>Text</type>
</CustomField>