force-app/main/default/objects/Referral_Points__c/fields/Demand__c.field-meta.xml
<CustomField>
    <fullName>Demand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demand</label>
    <referenceTo>RW_Demand__c</referenceTo>
    <relationshipLabel>Referral Points</relationshipLabel>
    <relationshipName>Referral_Points</relationshipName>
    <type>Lookup</type>
</CustomField>