force-app/main/default/objects/Referral_Points__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Referral Points</relationshipLabel>
    <relationshipName>Referral_Points</relationshipName>
    <type>Lookup</type>
</CustomField>