force-app/main/default/objects/Referral_Points__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Referral Points</relationshipLabel>
    <relationshipName>Referral_Points</relationshipName>
    <type>Lookup</type>
</CustomField>