force-app/main/default/objects/Referral_Points__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fresh Lead</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>Closed Referral</fullName>
            </value>
            <value>
                <fullName>On Time Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>